--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.btn {
+    @apply bg-pink-300 px-4 py-2  text-black hover:bg-pink-500
+    }   
